--- a/hogar.html
+++ b/hogar.html
@@ -48,7 +48,7 @@
 <body>
   <a href="https://wa.me/573189411374" class="whatsapp-fixed" target="_blank"><i class="fab fa-whatsapp"></i></a>
   <header>
-    <div class="logo">HogarVivo Deco</div>
+    <div class="logo">Recarga Tu Hogar</div>
     <div class="menu-toggle" onclick="document.querySelector('nav').classList.toggle('active')">Menú</div>
     <nav>
       <a href="#inicio">Inicio</a>
@@ -61,7 +61,7 @@
   <section class="hero" id="inicio">
     <div id="particles-js"></div><div class="scanline"></div>
     <div>
-      <h1>HogarVivo Deco</h1>
+      <h1>Recarga tu hogar</h1>
       <p>Decora tu espacio con estilo: cojines, vasos, marcos, velas y mucho más. ¡Envíos rápidos en la Costa Caribe!</p>
       <div class="hero-buttons">
         <a href="#productos" class="btn-hero">Ver Productos</a>
