Refactor hogar.html with new meta and iframe
Updated the HTML structure and styles for the page.

--- a/hogar.html
+++ b/hogar.html
@@ -1,234 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Recarga tu Hogar · Decoración Elegante</title>
-  <meta name="description" content="Cojines, vasos decorativos, marcos, velas y detalles únicos para transformar tu hogar. Envíos en Barranquilla, Santa Marta y Cartagena."/>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
-  <style>
-    :root {
-      --black: #000000;
-      --dark: #0a0a0a;
-      --gold: #c9a96e;
-      --gold-light: #e8d5a3;
-      --white: #f8f8f8;
-      --gray: #bbbbbb;
-    }
-    * { margin:0; padding:0; box-sizing:border-box; }
-    body {
-      background: var(--black);
-      color: var(--white);
-      font-family: 'Inter', sans-serif;
-      line-height: 1.7;
-    }
-    header {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background: rgba(0,0,0,0.88);
-      backdrop-filter: blur(16px);
-      z-index: 1000;
-      padding: 28px 6%;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      border-bottom: 1px solid rgba(201,169,110,0.15);
-    }
-    .logo {
-      font-family: 'Playfair Display', serif;
-      font-size: 2.4rem;
-      font-weight: 600;
-      color: var(--gold);
-      letter-spacing: 2px;
-    }
-    nav a {
-      color: var(--white);
-      text-decoration: none;
-      margin-left: 45px;
-      font-weight: 500;
-      font-size: 1.05rem;
-      transition: color 0.4s ease;
-    }
-    nav a:hover { color: var(--gold); }
-    .menu-toggle { display:none; font-size:2.2rem; color:var(--gold); cursor:pointer; }
-    @media (max-width: 900px) {
-      .menu-toggle { display:block; }
-      nav {
-        display:none;
-        position:absolute;
-        top:100%;
-        left:0;
-        width:100%;
-        background:var(--dark);
-        padding:40px 0;
-        text-align:center;
-      }
-      nav.active { display:block; }
-      nav a { display:block; margin:25px 0; font-size:1.5rem; }
-    }
-    .hero {
-      min-height: 100vh;
-      background: linear-gradient(135deg, #000000 0%, #120c00 100%);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      padding: 140px 6% 80px;
-      position: relative;
-    }
-    .hero-content {
-      max-width: 1100px;
-      z-index: 2;
-    }
-    .hero h1 {
-      font-family: 'Playfair Display', serif;
-      font-size: clamp(4.5rem, 11vw, 9rem);
-      margin-bottom: 24px;
-      line-height: 0.92;
-      color: var(--gold);
-    }
-    .hero p {
-      font-size: clamp(1.4rem, 4vw, 1.9rem);
-      color: #d9c9a5;
-      max-width: 720px;
-      margin: 0 auto 60px;
-      font-weight: 300;
-    }
-    .btn-primary {
-      display: inline-block;
-      padding: 18px 50px;
-      background: var(--gold);
-      color: var(--black);
-      text-decoration: none;
-      font-weight: 600;
-      letter-spacing: 1.5px;
-      border-radius: 50px;
-      transition: all 0.4s ease;
-      box-shadow: 0 8px 30px rgba(201,169,110,0.25);
-    }
-    .btn-primary:hover {
-      transform: translateY(-4px);
-      box-shadow: 0 15px 40px rgba(201,169,110,0.45);
-    }
-    .btn-whatsapp {
-      background: #25D366;
-      color: white;
-      margin-left: 25px;
-    }
-    section { padding: 140px 6%; text-align: center; }
-    h2 {
-      font-family: 'Playfair Display', serif;
-      font-size: 4rem;
-      margin-bottom: 70px;
-      color: var(--gold);
-    }
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
-      gap: 50px;
-    }
-    .card {
-      background: rgba(20,20,20,0.5);
-      border: 1px solid rgba(201,169,110,0.12);
-      border-radius: 20px;
-      overflow: hidden;
-      transition: all 0.5s ease;
-      backdrop-filter: blur(12px);
-    }
-    .card:hover {
-      transform: translateY(-20px);
-      border-color: var(--gold);
-      box-shadow: 0 25px 60px rgba(201,169,110,0.18);
-    }
-    .card img {
-      width: 100%;
-      height: 300px;
-      object-fit: cover;
-      transition: transform 0.7s ease;
-    }
-    .card:hover img { transform: scale(1.07); }
-    .card-content { padding: 35px; }
-    .card h3 { font-size: 2rem; margin-bottom: 16px; }
-    footer {
-      background: var(--black);
-      padding: 100px 6% 60px;
-      text-align: center;
-      border-top: 1px solid rgba(201,169,110,0.12);
-      color: var(--gray);
-      font-size: 0.95rem;
-    }
-    footer a { color: var(--gold); text-decoration: none; }
-    footer a:hover { color: var(--gold-light); }
-    #particles-js {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      top: 0; left: 0;
-    }
-  </style>
+    <meta charset="utf-8">
+    <title>Recarga Tu Hogar</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        html,body{margin:0;padding:0;height:100%;overflow:hidden}
+        iframe{border:none;width:100%;height:100vh;display:block}
+    </style>
 </head>
 <body>
+   
+    <iframe
+        src="https://deeppink-yak-155809.hostingersite.com/"
+        allowfullscreen
+        sandbox="allow-scripts allow-same-origin allow-forms allow-popups allow-top-navigation">
+    </iframe>
 
-  <a href="https://wa.me/573189411374" class="whatsapp-fixed" target="_blank">
-    <i class="fab fa-whatsapp"></i>
-  </a>
-
-  <header>
-    <div class="logo">Recarga Tu Hogar</div>
-    <div class="menu-toggle" onclick="document.querySelector('nav').classList.toggle('active')">☰</div>
-    <nav>
-      <a href="#inicio">Inicio</a>
-      <a href="#productos">Productos</a>
-      <a href="#envios">Envíos</a>
-      <a href="#nosotros">Nosotros</a>
-      <a href="#contacto">Contacto</a>
-    </nav>
-  </header>
-
-  <section class="hero">
-    <div id="particles-js"></div>
-    <div class="hero-content">
-      <h1>Eleva tu espacio</h1>
-      <p>Piezas cuidadosamente seleccionadas para transformar tu hogar en un lugar lleno de estilo y calidez.</p>
-      <div style="margin-top:70px;">
-        <a href="#productos" class="btn-primary">Ver Colección</a>
-        <a href="https://wa.me/573189411374" class="btn-primary btn-whatsapp" target="_blank">WhatsApp</a>
-      </div>
-    </div>
-  </section>
-
-  <!-- Aquí puedes agregar las otras secciones (productos, envíos, etc.) con el mismo estilo -->
-
-  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-  <script>
-    particlesJS("particles-js", {
-      particles: {
-        number: { value: 35 },
-        color: { value: ["#c9a96e", "#e8d5a3", "#ffffff"] },
-        shape: { type: "circle" },
-        opacity: { value: 0.35, random: true, anim: { enable: true, speed: 0.8 } },
-        size: { value: 3, random: true },
-        line_linked: { enable: false },
-        move: {
-          enable: true,
-          speed: 0.7,
-          direction: "none",
-          random: true,
-          straight: false,
-          out_mode: "out"
-        }
-      },
-      interactivity: {
-        events: { onhover: { enable: true, mode: "bubble" } },
-        modes: { bubble: { distance: 180, size: 5, duration: 2, opacity: 0.7 } }
-      },
-      retina_detect: true
-    });
-  </script>
-
+    
 </body>
 </html>
